--- a/refs.bib
+++ b/refs.bib
@@ -737,6 +737,178 @@
     number = {1},
     doi = {10.1016/0012-365X(74)90019-3}
 }
+@article{capp22C,
+    title = {{Complexity results on open-independent, open-locating-dominating sets in complementary prism graphs}},
+    author = {M. Cappelle and E. Coelho and L. Foulds and H. Longo},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2022},
+    pages = {124--133},
+    volume = {323},
+    doi = {10.1016/j.dam.2022.04.010}
+}
+@article{exoo06,
+    title = {{Improved upper bounds on binary identifying codes}},
+    author = {G. Exoo and T. Laihonen and S. Ranto},
+    journal = {{IEEE Transactions on Information Theory}},
+    year = {2007},
+    pages = {4255--4260},
+    volume = {IT-53},
+    doi = {10.1109/TIT.2007.907434}
+}
+@article{fazi16,
+    title = {{Locating-dominating sets in hypergraphs}},
+    author = {M. Fazil and I. Javaid and M. Salman and U. Ali},
+    journal = {{Periodica Mathematica Hungarica}},
+    year = {2016},
+    pages = {224--234},
+    volume = {72},
+    doi = {10.1007/s10998-016-0121-8}
+}
+@article{junn13,
+    title = {{New lower bound for 2-identifying code in the square grid}},
+    author = {V. Junnila},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2013},
+    pages = {2042--2051},
+    volume = {161},
+    doi = {10.1016/j.dam.2013.02.032}
+}
+@article{debo03,
+    title = {{Approximation algorithms for the test cover problem}},
+    author = {K. De bontridder and B. Halld\'orsson and M. Halld\'orsson and C. Hurkens and J. Lenstra and R. Ravi and L. Stougie},
+    journal = {{Mathematical Programming}},
+    year = {2003},
+    pages = {477--491},
+    volume = {98},
+    doi = {10.1007/s10107-003-0414-6}
+}
+@article{exoo08c,
+    title = {{Upper bounds for binary identifying codes}},
+    author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
+    journal = {{Advances in Applied Mathematics}},
+    year = {2009},
+    pages = {277--289},
+    volume = {42},
+    doi = {10.1016/j.aam.2008.06.004}
+}
+@article{give20,
+    title = {{Open-locating domination sets in circulant graphs}},
+    author = {R. Givens and G. Yu and R. Kincaid},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    year = {2022},
+    pages = {47--62},
+    volume = {42},
+    number = {1},
+    doi = {10.7151/dmgt.2235}
+}
+@article{cape19,
+    title = {{Open-independent, open-locating-dominating sets in complementary prism graphs}},
+    author = {M. Cappelle and E. Coelho and L. Foulds and H. Longo},
+    journal = {{Electronic Notes in Theoretical Computer Science}},
+    year = {2019},
+    pages = {253--264},
+    volume = {346},
+    doi = {10.1016/j.entcs.2019.08.023}
+}
+@article{fouc17z,
+    title = {{Identification, location-domination and metric dimension on interval and permutation graphs: I. Bounds}},
+    author = {F. Foucaud and G. Mertzios and R. Naserasr and A. Parreau and P. Valicov},
+    journal = {{Theoretical Computer Science}},
+    year = {2017},
+    pages = {43--58},
+    volume = {668},
+    doi = {10.1016/j.tcs.2017.01.006}
+}
+@article{basuC21,
+    title = {{Identifying individuals associated with organized criminal networks: A social network analysis}},
+    author = {K. Basu and A. Sen},
+    journal = {{Social Networks}},
+    year = {2021},
+    pages = {42--54},
+    volume = {64},
+    doi = {10.1016/j.socnet.2020.07.009}
+}
+@article{karp98a,
+    title = {{On a new class of codes for identifying vertices in graphs}},
+    author = {M. Karpovsky and K. Chakrabarty and L. Levitin},
+    journal = {{IEEE Transactions on Information Theory}},
+    year = {1998},
+    pages = {599--611},
+    volume = {IT-44},
+    doi = {10.1109/18.661507}
+}
+@article{dhal19b,
+    title = {{$r$-identifying codes in binary Hamming space, $q$-ary Lee space and incomplete hypercube}},
+    author = {R. Dhanalakshmi and C. Durairajan},
+    journal = {{Discrete Mathematics, Algorithms and Applications}},
+    year = {2019},
+    pages = {14},
+    volume = {11},
+    number = {2},
+    doi = {10.1142/S1793830919500277}
+}
+@article{laif11,
+    title = {{Localization and identification in networks using robust identifying codes}},
+    author = {M. Laifenfeld},
+    journal = {{Proceedings of Information Theory and Applications Workshop, ITA 2008}},
+    year = {2008},
+    pages = {165--174},
+    doi = {10.1109/ITA.2008.4601043}
+}
+@article{laih06a,
+    title = {{Optimal $t$-edge-robust $r$-identifying codes in the king lattice}},
+    author = {T. Laihonen},
+    journal = {{Graphs and Combinatorics}},
+    year = {2006},
+    pages = {487--496},
+    volume = {22},
+    doi = {10.1007/s00373-006-0682-z}
+}
+@article{honk02b,
+    title = {{On identifying codes in binary Hamming spaces}},
+    author = {I. Honkala and A. Lobstein},
+    journal = {{Journal of Combinatorial Theory, Series A}},
+    year = {2002},
+    pages = {232--243},
+    volume = {99},
+    doi = {10.1006/jcta.2002.3263}
+}
+@article{char06,
+    title = {{Structural properties of twin-free graphs}},
+    author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
+    journal = {{Electronic Journal of Combinatorics}},
+    year = {2007},
+    volume = {14},
+    number = {1},
+    doi = {10.37236/934}
+}
+@article{honk03d,
+    title = {{An optimal edge-robust identifying code in the triangular lattice}},
+    author = {I. Honkala},
+    journal = {{Annals of Combinatorics}},
+    year = {2004},
+    pages = {303--323},
+    volume = {8},
+    doi = {10.1007/s00026-004-0222-6}
+}
+@article{fouc21q,
+    title = {{Characterizing extremal graphs for open neighbourhood location-domination}},
+    author = {F. Foucaud and N. Ghareghani and A. Roshany-tabrizi and P. Shariani},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2021},
+    pages = {76--79},
+    volume = {302},
+    doi = {10.1016/j.dam.2021.06.006}
+}
+@article{grav14,
+    title = {{Graphs where every $k$-subset of vertices is an identifying set}},
+    author = {S. Gravier and S. Janson and T. Laihonen and S. Ranto},
+    journal = {{Discrete Mathematics and Theoretical Computer Science}},
+    year = {2014},
+    pages = {73--88},
+    volume = {16},
+    doi = {10.46298/dmtcs.1253}
+}
 @article{char03a,
     title = {{The minimum density of an identifying code in the king lattice}},
     author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
@@ -917,6 +1089,15 @@
     pages = {633--645},
     volume = {17},
     doi = {10.1002/jgt.3190170511}
+}
+@article{grav16,
+    title = {{Identifying codes in vertex-transitive graphs and strongly regular graphs}},
+    author = {S. Gravier and A. Parreau and S. Rottay and L. Storme and E. Vandomme},
+    journal = {{Electronic Journal of Combinatorics}},
+    year = {2015},
+    volume = {22},
+    number = {4},
+    doi = {10.48550/arXiv.1411.5275}
 }
 @article{hudr15a,
     title = {{More results on the complexity of identifying problems in graphs}},
@@ -1752,14 +1933,6 @@
     pages = {165--168},
     volume = {856}
 }
-@article{basuC21,
-    title = {{Identifying individuals associated with organized criminal networks: A social network analysis}},
-    author = {K. Basu and A. Sen},
-    journal = {{Social Networks}},
-    year = {2021},
-    pages = {42--54},
-    volume = {64}
-}
 @article{beau18,
     title = {{Bounding the order of a graph using its diameter and metric dimension: a study through tree decompositions and VC dimension}},
     author = {L. Beaudou and P. Dankelmann and F. Foucaud and M. Henning and A. Mary and A. Parreau},
@@ -1886,14 +2059,6 @@
     pages = {969--987},
     volume = {25}
 }
-@article{bert03b,
-    title = {{1-identifying codes on trees}},
-    author = {N. Bertrand and I. Charon and O. Hudry and A. Lobstein},
-    journal = {{Australasian Journal of Combinatorics}},
-    year = {2005},
-    pages = {21--35},
-    volume = {31}
-}
 @article{blas01a,
     title = {{Bounds on identifying codes}},
     author = {U. Blass and I. Honkala and S. Litsyn},
@@ -1968,15 +2133,6 @@
     pages = {131},
     address = {France}
 }
-@article{bouz19k,
-    title = {{Exact values for three domination-like problems in circular and infinite grid graphs of small height}},
-    author = {M. Bouznif and J. Darlay and J. Moncel and M. Preissmann},
-    journal = {{Discrete Mathematics and Theoretical Computer Science}},
-    year = {2019},
-    pages = {21},
-    volume = {21},
-    number = {3}
-}
 @article{bouz16,
     title = {{Minimum-density identifying codes in square grids}},
     author = {M. Bouznif and F. Havet and M. Preissmann},
@@ -2025,22 +2181,6 @@
     year = {2022},
     pages = {193--204},
     volume = {62}
-}
-@article{cape19,
-    title = {{Open-independent, open-locating-dominating sets in complementary prism graphs}},
-    author = {M. Cappelle and E. Coelho and L. Foulds and H. Longo},
-    journal = {{Electronic Notes in Theoretical Computer Science}},
-    year = {2019},
-    pages = {253--264},
-    volume = {346}
-}
-@article{capp22C,
-    title = {{Complexity results on open-independent, open-locating-dominating sets in complementary prism graphs}},
-    author = {M. Cappelle and E. Coelho and L. Foulds and H. Longo},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2022},
-    pages = {124--133},
-    volume = {323}
 }
 @article{capp22K,
     title = {{Open-independent, open-locating-dominating sets: structural aspects of some classes of graphs}},
@@ -2114,14 +2254,6 @@
     journal = {{Electronic Journal of Combinatorics}},
     year = {2001},
     volume = {8},
-    number = {1}
-}
-@article{char06,
-    title = {{Structural properties of twin-free graphs}},
-    author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
-    journal = {{Electronic Journal of Combinatorics}},
-    year = {2007},
-    volume = {14},
     number = {1}
 }
 @article{char12b,
@@ -2246,14 +2378,6 @@
     pages = {65--79},
     volume = {269}
 }
-@article{char03e,
-    title = {{Distance-location numbers of graphs}},
-    author = {G. Chartrand and D. Erwin and P. Slater and P. Zhang},
-    journal = {{Utilitas Mathematica}},
-    year = {2003},
-    pages = {65--79},
-    volume = {63}
-}
 @article{chel08,
     title = {{On locating and differentiating-total domination in trees}},
     author = {M. Chellali},
@@ -2312,14 +2436,6 @@
     pages = {19--22},
     address = {Roscoff, France}
 }
-@article{dali14b,
-    title = {{On locating and locating-total domination edge addition critical graphs}},
-    author = {W. Dali and M. Blidia},
-    journal = {{Utilitas Mathematica}},
-    year = {2014},
-    pages = {303--313},
-    volume = {94}
-}
 @article{dani03,
     title = {{Codes identifiants}},
     author = {M. Daniel},
@@ -2360,14 +2476,6 @@
     pages = {51--56},
     volume = {62}
 }
-@article{debo03,
-    title = {{Approximation algorithms for the test cover problem}},
-    author = {K. De bontridder and B. Halld\'orsson and M. Hall\-d\'ors\-son and C. Hurkens and J. Lenstra and R. Ravi and L. Stou\-gie},
-    journal = {{Mathematical Programming}},
-    year = {2003},
-    pages = {477--491},
-    volume = {98}
-}
 @article{dhal19a,
     title = {{Constructions of $r$-identifying codes and ($r,\leq \ell$)-identifying codes}},
     author = {R. Dhanalakshmi and C. Durairajan},
@@ -2375,15 +2483,6 @@
     year = {2019},
     pages = {531--547},
     volume = {50}
-}
-@article{dhal19b,
-    title = {{$r$-identifying codes in binary Hamming space, $q$-ary Lee space and incomplete hypercube}},
-    author = {R. Dhanalakshmi and C. Durairajan},
-    journal = {{Discrete Mathematics, Algorithms and Applications}},
-    year = {2019},
-    pages = {14},
-    volume = {11},
-    number = {2}
 }
 @article{dhanC22,
     title = {{Bounds on $r$-identifying codes in $q$-ary Lee space}},
@@ -2402,14 +2501,6 @@
     pages = {97--112},
     volume = {202}
 }
-@article{exoo08c,
-    title = {{Upper bounds for binary identifying codes}},
-    author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
-    journal = {{Advances in Applied Mathematics}},
-    year = {2009},
-    pages = {277--289},
-    volume = {42}
-}
 @article{exoo08b,
     title = {{Improved bounds on identifying codes in binary Hamming spaces}},
     author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
@@ -2417,14 +2508,6 @@
     year = {2010},
     pages = {813--827},
     volume = {31}
-}
-@article{exoo06,
-    title = {{Improved upper bounds on binary identifying codes}},
-    author = {G. Exoo and T. Laihonen and S. Ranto},
-    journal = {{IEEE Transactions on Information Theory}},
-    year = {2007},
-    pages = {4255--4260},
-    volume = {IT-53}
 }
 @article{exoo08,
     title = {{New bounds on binary identifying codes}},
@@ -2440,14 +2523,6 @@
     journal = {{ACM Journal of Experimental Algorithmics}},
     year = {2006},
     volume = {11}
-}
-@article{fazi16,
-    title = {{Locating-dominating sets in hypergraphs}},
-    author = {M. Fazil and I. Javaid and M. Salman and U. Ali},
-    journal = {{Periodica Mathematica Hungarica}},
-    year = {2016},
-    pages = {224--234},
-    volume = {72}
 }
 @article{feng22,
     title = {{Optimal identifying codes of two families of Cayley graphs}},
@@ -2489,14 +2564,6 @@
     pages = {150--163},
     publisher = {Springer-Verlag}
 }
-@article{fouc21q,
-    title = {{Characterizing extremal graphs for open neighbourhood location-domination}},
-    author = {F. Foucaud and N. Ghareghani and A. Roshany-tabrizi and P. Shariani},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2021},
-    pages = {76--79},
-    volume = {302}
-}
 @article{fouc12a,
     title = {{Edge identifying codes}},
     author = {F. Foucaud and S. Gravier and R. Naserasr and A. Parreau and P. Valicov},
@@ -2504,20 +2571,6 @@
     year = {2011},
     pages = {343--348},
     volume = {38}
-}
-@article{fouc10a,
-    title = {{On identifying codes and Bondy's theorem on ``induced subsets''}},
-    author = {F. Foucaud and E. Guerrini and M. Kov$\check{\textrm{s}}$e and R. Naserasr and A. Parreau and P. Valicov},
-    journal = {{Abstracts of the 8th French Combinatorial Conference}},
-    year = {2010},
-    address = {Orsay, France}
-}
-@article{fouc10b,
-    title = {{Classifying graphs with minimum identifying code of size $n-1$}},
-    author = {F. Foucaud and E. Guerrini and M. Kov$\check{\textrm{s}}$e and R. Naserasr and A. Parreau and P. Valicov},
-    journal = {{Abstracts of the 8th French Combinatorial Conference}},
-    year = {2010},
-    address = {Orsay, France}
 }
 @article{fouc11a,
     title = {{Extremal graphs for the identifying code problem}},
@@ -2550,14 +2603,6 @@
     year = {2016},
     pages = {456--471},
     publisher = {Springer-Verlag}
-}
-@article{fouc17z,
-    title = {{Identification, location-domination and metric dimension on interval and permutation graphs: I. Bounds}},
-    author = {F. Foucaud and G. Mertzios and R. Naserasr and A. Parreau and P. Valicov},
-    journal = {{Theoretical Computer Science}},
-    year = {2017},
-    pages = {43--58},
-    volume = {668}
 }
 @article{fric07,
     title = {{Critical graphs with respect to vertex identification}},
@@ -2599,23 +2644,6 @@
     pages = {129--144},
     volume = {151}
 }
-@article{give20,
-    title = {{Open-locating domination sets in circulant graphs}},
-    author = {R. Givens and G. Yu and R. Kincaid},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2022},
-    pages = {47--62},
-    volume = {42},
-    number = {1}
-}
-@article{godd13,
-    title = {{ID codes in Cartesian products of cliques}},
-    author = {W. Goddard and K. Wash},
-    journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
-    year = {2013},
-    pages = {97--106},
-    volume = {85}
-}
 @article{grap08,
     title = {{Un probl\`eme de surveillance : mod\'elisation et simulation avec la th\'eorie des jeux}},
     author = {R. Grappe and N. Brauner and J. Moncel},
@@ -2625,14 +2653,6 @@
     pages = {221--222},
     address = {Clermont-Ferrand, France}
 }
-@article{grav14,
-    title = {{Graphs where every $k$-subset of vertices is an identifying set}},
-    author = {S. Gravier and S. Janson and T. Laihonen and S. Ranto},
-    journal = {{Discrete Mathematics and Theoretical Computer Science}},
-    year = {2014},
-    pages = {73--88},
-    volume = {16}
-}
 @article{grav04,
     title = {{On graphs having a $V \setminus \{ x \}$ set as an identifying code}},
     author = {S. Gravier and J. Moncel},
@@ -2640,14 +2660,6 @@
     year = {2007},
     pages = {432--434},
     volume = {307}
-}
-@article{grav16,
-    title = {{Identifying codes in vertex-transitive graphs and strongly regular graphs}},
-    author = {S. Gravier and A. Parreau and S. Rottay and L. Storme and E. Vandomme},
-    journal = {{Electronic Journal of Combinatorics}},
-    year = {2015},
-    volume = {22},
-    number = {4}
 }
 @article{hafi22,
     title = {{On the locating chromatic number of trees}},
@@ -2681,21 +2693,6 @@
     pages = {158--169},
     publisher = {Springer-Verlag},
     volume = {2161}
-}
-@article{hara76,
-    title = {{On the metric dimension of a graph}},
-    author = {F. Harary and R. Melter},
-    journal = {{Ars Combinatoria}},
-    year = {1976},
-    pages = {191--195},
-    volume = {2}
-}
-@article{hara77,
-    title = {{Addendum to ``On the metric dimension of a graph'' (Ars Combinatoria 2 (1976) 191--195)}},
-    author = {F. Harary and R. Melter},
-    journal = {{Ars Combinatoria}},
-    year = {1977},
-    volume = {4}
 }
 @article{hata05,
     title = {{$\Delta +300$ is a bound on the adjacent vertex distinguishing edge chromatic number}},
@@ -2753,14 +2750,6 @@
     pages = {303--316},
     volume = {25}
 }
-@article{honk03d,
-    title = {{An optimal edge-robust identifying code in the triangular lattice}},
-    author = {I. Honkala},
-    journal = {{Annals of Combinatorics}},
-    year = {2004},
-    pages = {303--323},
-    volume = {8}
-}
 @article{honk06c,
     title = {{On identifying codes in the king grid that are robust against edge deletions}},
     author = {I. Honkala and T. Laihonen},
@@ -2792,14 +2781,6 @@
     year = {2004},
     pages = {265--282},
     volume = {6}
-}
-@article{honk02b,
-    title = {{On identifying codes in binary Hamming spaces}},
-    author = {I. Honkala and A. Lobstein},
-    journal = {{Journal of Combinatorial Theory, Series A}},
-    year = {2002},
-    pages = {232--243},
-    volume = {99}
 }
 @article{honk03a,
     title = {{On identification in $Z^2$ using translates of given patterns}},
@@ -2866,14 +2847,6 @@
     pages = {125},
     address = {Turku, Finland}
 }
-@article{junn13,
-    title = {{New lower bound for 2-identifying code in the square grid}},
-    author = {V. Junnila},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2013},
-    pages = {2042--2051},
-    volume = {161}
-}
 @article{junn11,
     title = {{Identification in $Z^2$ using Euclidean balls}},
     author = {V. Junnila and T. Laihonen},
@@ -2906,14 +2879,6 @@
     pages = {243--256},
     volume = {145},
     number = {3}
-}
-@article{junn16c,
-    title = {{Collection of codes for tolerant location}},
-    author = {V. Junnila and T. Laihonen},
-    journal = {{Proceedings of the Bordeaux Graph Workshop}},
-    year = {2016},
-    pages = {176--179},
-    address = {Bordeaux, France}
 }
 @article{junn21q,
     title = {{On Levenshtein's channel and list size in information retrieval}},
@@ -2958,14 +2923,6 @@
     pages = {38--56},
     volume = {95}
 }
-@article{karp98a,
-    title = {{On a new class of codes for identifying vertices in graphs}},
-    author = {M. Karpovsky and K. Chakrabarty and L. Levitin},
-    journal = {{IEEE Transactions on Information Theory}},
-    year = {1998},
-    pages = {599--611},
-    volume = {IT-44}
-}
 @article{kim05,
     title = {{How complex are random graphs in first order logic?}},
     author = {J. Kim and O. Pikhurko and J. Spencer and O. Verbitsky},
@@ -3006,20 +2963,6 @@
     pages = {139--144},
     volume = {193}
 }
-@phdthesis{laif07b,
-    title = {{Coding for network applications: robust identification and distributed resource allocation}},
-    author = {M. Laifenfeld},
-    year = {2007},
-    school = {University of Boston},
-    address = {Massachusetts, USA}
-}
-@article{laif11,
-    title = {{Localization and identification in networks using robust identifying codes}},
-    author = {M. Laifenfeld},
-    journal = {{Proceedings of Information Theory and Applications Workshop, ITA 2008}},
-    year = {2008},
-    pages = {165--174}
-}
 @article{laif05,
     title = {{Disjoint identifying-codes for arbitrary graphs}},
     author = {M. Laifenfeld and A. Trachtenberg},
@@ -3053,14 +2996,6 @@
     year = {2002},
     pages = {307--313},
     volume = {23}
-}
-@article{laih06a,
-    title = {{Optimal $t$-edge-robust $r$-identifying codes in the king lattice}},
-    author = {T. Laihonen},
-    journal = {{Graphs and Combinatorics}},
-    year = {2006},
-    pages = {487--496},
-    volume = {22}
 }
 @article{laih05a,
     title = {{On edge-robust $(1,\leq\ell)$-identifying codes in binary Hamming spaces}},
@@ -3110,15 +3045,6 @@
     year = {2000},
     pages = {269--288},
     volume = {243}
-}
-@article{li08,
-    title = {{Bounds for fault-tolerant locating-dominating sets}},
-    author = {M. Li and E. Shan and M. Gao},
-    journal = {{Journal of Shanghai University. Natural Science}},
-    year = {2008},
-    pages = {611--616},
-    volume = {14},
-    number = {6}
 }
 @article{lobs20,
     title = {{Locating-Domination and Identification}},
@@ -3258,16 +3184,6 @@
     volume = {72},
     number = {7}
 }
-@article{muth12b,
-    title = {{Co-isolated locating domination number for some standard graphs}},
-    author = {S. Muthammai and N. Meenal},
-    journal = {{National Conference on Applications of Mathematics and Computer Science (NCAMCS-2012)}},
-    month = {February},
-    year = {2012},
-    pages = {60--61},
-    school = {S.D.N.B Vaishnav College for Women},
-    address = {Chennai, India}
-}
 @inproceedings{muth12,
     title = {{Co-isolated locating domination number of a graph}},
     author = {S. Muthammai and N. Meenal},
@@ -3353,14 +3269,6 @@
     school = {Universit\'e de Grenoble},
     pages = {214},
     address = {Grenoble, France}
-}
-@article{past11,
-    title = {{Les codes identifiants ou comment sauver le Palais des flammes?}},
-    author = {M. Pastori},
-    journal = {{D\'ecouverte}},
-    year = {2010},
-    pages = {56--59},
-    volume = {369}
 }
 @article{pelt10,
     title = {{New bounds for $(r,\leq 2)$-identifying codes in the infinite king grid}},
@@ -4603,4 +4511,116 @@
     year = {2018},
     pages = {121--141},
     volume = {104}
+}
+@article{fouc10b,
+    title = {{Classifying graphs with minimum identifying code of size $n-1$}},
+    author = {F. Foucaud and E. Guerrini and M. Kov$\check{\textrm{s}}$e and R. Naserasr and A. Parreau and P. Valicov},
+    journal = {{Abstracts of the 8th French Combinatorial Conference}},
+    year = {2010},
+    address = {Orsay, France}
+}
+@article{past11,
+    title = {{Les codes identifiants ou comment sauver le Palais des flammes?}},
+    author = {M. Pastori},
+    journal = {{D\'ecouverte}},
+    year = {2010},
+    pages = {56--59},
+    volume = {369}
+}
+@article{char03e,
+    title = {{Distance-location numbers of graphs}},
+    author = {G. Chartrand and D. Erwin and P. Slater and P. Zhang},
+    journal = {{Utilitas Mathematica}},
+    year = {2003},
+    pages = {65--79},
+    volume = {63}
+}
+@article{bouz19k,
+    title = {{Exact values for three domination-like problems in circular and infinite grid graphs of small height}},
+    author = {M. Bouznif and J. Darlay and J. Moncel and M. Preissmann},
+    journal = {{Discrete Mathematics and Theoretical Computer Science}},
+    year = {2019},
+    pages = {21},
+    volume = {21},
+    number = {3}
+}
+@article{muth12b,
+    title = {{Co-isolated locating domination number for some standard graphs}},
+    author = {S. Muthammai and N. Meenal},
+    journal = {{National Conference on Applications of Mathematics and Computer Science (NCAMCS-2012)}},
+    month = {February},
+    year = {2012},
+    pages = {60--61},
+    school = {S.D.N.B Vaishnav College for Women},
+    address = {Chennai, India}
+}
+@article{hara76,
+    title = {{On the metric dimension of a graph}},
+    author = {F. Harary and R. Melter},
+    journal = {{Ars Combinatoria}},
+    year = {1976},
+    pages = {191--195},
+    volume = {2}
+}
+@article{hara77,
+    title = {{Addendum to ``On the metric dimension of a graph'' (Ars Combinatoria 2 (1976) 191--195)}},
+    author = {F. Harary and R. Melter},
+    journal = {{Ars Combinatoria}},
+    year = {1977},
+    volume = {4}
+}
+@article{bert03b,
+    title = {{1-identifying codes on trees}},
+    author = {N. Bertrand and I. Charon and O. Hudry and A. Lobstein},
+    journal = {{Australasian Journal of Combinatorics}},
+    year = {2005},
+    pages = {21--35},
+    volume = {31}
+}
+@article{godd13,
+    title = {{ID codes in Cartesian products of cliques}},
+    author = {W. Goddard and K. Wash},
+    journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
+    year = {2013},
+    pages = {97--106},
+    volume = {85}
+}
+@phdthesis{laif07b,
+    title = {{Coding for network applications: robust identification and distributed resource allocation}},
+    author = {M. Laifenfeld},
+    year = {2007},
+    school = {University of Boston},
+    address = {Massachusetts, USA}
+}
+@article{li08,
+    title = {{Bounds for fault-tolerant locating-dominating sets}},
+    author = {M. Li and E. Shan and M. Gao},
+    journal = {{Journal of Shanghai University. Natural Science}},
+    year = {2008},
+    pages = {611--616},
+    volume = {14},
+    number = {6}
+}
+@article{dali14b,
+    title = {{On locating and locating-total domination edge addition critical graphs}},
+    author = {W. Dali and M. Blidia},
+    journal = {{Utilitas Mathematica}},
+    year = {2014},
+    pages = {303--313},
+    volume = {94}
+}
+@article{fouc10a,
+    title = {{On identifying codes and Bondy's theorem on ``induced subsets''}},
+    author = {F. Foucaud and E. Guerrini and M. Kov$\check{\textrm{s}}$e and R. Naserasr and A. Parreau and P. Valicov},
+    journal = {{Abstracts of the 8th French Combinatorial Conference}},
+    year = {2010},
+    address = {Orsay, France}
+}
+@article{junn16c,
+    title = {{Collection of codes for tolerant location}},
+    author = {V. Junnila and T. Laihonen},
+    journal = {{Proceedings of the Bordeaux Graph Workshop}},
+    year = {2016},
+    pages = {176--179},
+    address = {Bordeaux, France}
 }
